--- a/AndroidStudioProjects/VisitSeattle/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/VisitSeattle/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-
 <resources>
     <!-- Title for the application. [CHAR LIMIT=12] -->
     <string name="app_name">Visit Seattle</string>
@@ -17,4 +16,6 @@
 
     <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
     <string name="category_gardens">Gardens</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
